# yandex_to_lastfm

./: .gitignore  README.md  make-bundles.ps1
yandex_to_lastfm_rs/: Cargo.toml  build.rs
yandex_to_lastfm_rs/src/: app_config.rs  autostart.rs  config.rs  lastfm.rs  main.rs  models.rs  server.rs
yandex_to_lastfm_rs/src/ui/: anim.rs  mod.rs  raster.rs  settings.rs  state.rs  text.rs  tray.rs  window.rs
ym_bridge_ext/: background.js  content.js  delivery.js  lastfm_api.js  manifest.json  mode.js  options.html  options.js  page.js  panel.js  sidepanel.css  sidepanel.html
