[package]
name = "yamusic_lastfm_popup"
version = "0.1.0"
edition = "2021"

[dependencies]
fontdue = "0.9"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
eframe = "0.33"
egui = "0.33"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
tray-icon = "0.21"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[build-dependencies]
winres = "0.1"
image = "0.25"